// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not find out of stock product 1`] = `
Object {
  "hasOutOfStockItem": false,
}
`;

exports[`finds out of stock product 1`] = `
Object {
  "hasOutOfStockItem": true,
}
`;

exports[`returns undefined with no products 1`] = `
Object {
  "hasOutOfStockItem": undefined,
}
`;
